--- a/index.html
+++ b/index.html
@@ -49,15 +49,6 @@
 
         <!-- END Icons -->
 
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144023646-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag("js", new Date());
-            gtag("config", "UA-144023646-1");
-        </script>
         <meta property="og:title" content="One HTML Page Challenge" />
         <meta property="og:image" content="https://repository-images.githubusercontent.com/194445383/571a9000-9cd0-11e9-9a72-2faf76647a01" />
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -110,9 +101,8 @@
                             The goal is to create anything you want within 1 single html file. Practice your skills with no assistance from libraries, no separation of files, and no assistance of a modern framework.
                             <b>How creative can you be with such restrictions?</b>
                         </p>
-                        <a class="btn btn-primary btn-lg" href="https://github.com/Metroxe/one-html-page-challenge/blob/master/README.md#how-to-submit" role="button">Submit an Entry</a>
-                        <a class="btn btn-primary btn-lg" href="https://github.com/Metroxe/one-html-page-challenge" role="button">Github</a>
-                        <a class="btn btn-success btn-lg" href="https://github.com/sponsors/Metroxe" role="button">Sponsor ❤️</a>
+                        <a class="btn btn-primary btn-lg" href="https://github.com/FrontMen/one-html-page-challenge/blob/master/README.md#how-to-submit" role="button">Submit an Entry</a>
+                        <a class="btn btn-primary btn-lg" href="https://github.com/FrontMen/one-html-page-challenge" role="button">Github</a>
                     </div>
                     <div class="input-group flex-nowrap">
                         <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="addon-wrapping" id="search" oninput="searchOnInput()" />
@@ -183,27 +173,17 @@
                         const authorSubtitle = document.createElement("h6");
                         const authorSubtitleNode = document.createTextNode(author);
                         authorSubtitle.className = "card-subtitle mb-2 text-muted";
-                        authorSubtitle.appendChild(authorSubtitleNode);
+                        // authorSubtitle.appendChild(authorSubtitleNode);
 
-                        // add a sponsor tag
-                        if (sponsored) {
-                            const sponsorEmoji = document.createElement("a");
-                            const sponsorEmojiNode = document.createTextNode(" ❤️");
-                            sponsorEmoji.href = "https://github.com/sponsors/Metroxe";
-                            sponsorEmoji.title = "Sponsored Submission";
-                            sponsorEmoji.appendChild(sponsorEmojiNode);
-                            authorSubtitle.appendChild(sponsorEmoji);
-                        }
-
-                        // add an owner tag for myself
-                        if (author.includes("Christopher Powroznik")) {
-                            const ownerEmoji = document.createElement("a");
-                            const ownerEmojiNode = document.createTextNode(" 👑️");
-                            ownerEmoji.href = "https://github.com/Metroxe";
-                            ownerEmoji.title = "Owner";
-                            ownerEmoji.appendChild(ownerEmojiNode);
-                            authorSubtitle.appendChild(ownerEmoji);
-                        }
+                        // // add an owner tag for myself
+                        // if (author.includes("Randy Daal")) {
+                        //     const ownerEmoji = document.createElement("a");
+                        //     const ownerEmojiNode = document.createTextNode(" 👑️");
+                        //     ownerEmoji.href = "https://github.com/Metroxe";
+                        //     ownerEmoji.title = "Owner";
+                        //     ownerEmoji.appendChild(ownerEmojiNode);
+                        //     authorSubtitle.appendChild(ownerEmoji);
+                        // }
 
                         body.appendChild(authorSubtitle);
                     }
@@ -250,7 +230,7 @@
                     const sourceCodeButton = document.createElement("a");
                     const sourceCodeNode = document.createTextNode("Source");
                     sourceCodeButton.className = "btn btn-secondary btn-md";
-                    sourceCodeButton.href = `https://github.com/Metroxe/one-html-page-challenge/blob/master/entries/${filename}`;
+                    sourceCodeButton.href = `https://github.com/FrontMen/one-html-page-challenge/blob/master/entries/${filename}`;
                     sourceCodeButton.appendChild(sourceCodeNode);
                     group1.appendChild(sourceCodeButton);
 
