--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         </p>
                         <a class="btn btn-primary btn-lg" href="https://github.com/FrontMen/one-html-page-challenge/blob/master/README.md#how-to-submit" role="button">Submit an Entry</a>
                         <a class="btn btn-primary btn-lg" href="https://github.com/FrontMen/one-html-page-challenge" role="button">Github</a>
+                        <p>Project is inspired on open version by <a href="https://github.com/Metroxe/one-html-page-challenge">Metroxe</a></a></p>
                     </div>
                     <div class="input-group flex-nowrap">
                         <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="addon-wrapping" id="search" oninput="searchOnInput()" />
