--- a/index.html
+++ b/index.html
@@ -62,8 +62,29 @@
                 max-width: 70%;
             }
 
-            body {
-                background: repeating-linear-gradient(45deg, #000000, #1e1e1e 10px, #15191d 10px, #15191d 20px);
+            body.bg {
+                background: linear-gradient(236deg, #ff5900, #00cccc, #201e33);
+                background-size: 600% 600%;
+
+                -webkit-animation: GradientAnim 30s ease infinite;
+                -moz-animation: GradientAnim 30s ease infinite;
+                animation: GradientAnim 30s ease infinite;
+            }
+
+            @-webkit-keyframes GradientAnim {
+                0%{background-position:0% 90%}
+                50%{background-position:100% 11%}
+                100%{background-position:0% 90%}
+            }
+            @-moz-keyframes GradientAnim {
+                0%{background-position:0% 90%}
+                50%{background-position:100% 11%}
+                100%{background-position:0% 90%}
+            }
+            @keyframes GradientAnim {
+                0%{background-position:0% 90%}
+                50%{background-position:100% 11%}
+                100%{background-position:0% 90%}
             }
 
             .card-text:nth-of-type(2)::before {
@@ -88,7 +109,7 @@
             }
         </style>
     </head>
-    <body>
+    <body class="bg">
         <div class="container">
             <br />
 
@@ -103,7 +124,6 @@
                         </p>
                         <a class="btn btn-primary btn-lg" href="https://github.com/FrontMen/one-html-page-challenge/blob/master/README.md#how-to-submit" role="button">Submit an Entry</a>
                         <a class="btn btn-primary btn-lg" href="https://github.com/FrontMen/one-html-page-challenge" role="button">Github</a>
-                        <p>Project is inspired on open version by <a href="https://github.com/Metroxe/one-html-page-challenge">Metroxe</a></a></p>
                     </div>
                     <div class="input-group flex-nowrap">
                         <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="addon-wrapping" id="search" oninput="searchOnInput()" />
@@ -114,6 +134,7 @@
                     <div id="list"></div>
                 </div>
             </div>
+            <p class="text-right">Project inspired on  <a href="https://onehtmlpagechallenge.com" rel="nofollow">One HTML Page Challenge</a> by <a href="https://github.com/Metroxe/one-html-page-challenge" rel="nofollow">Metroxe</a></p>
         </div>
         <br />
 
@@ -174,17 +195,17 @@
                         const authorSubtitle = document.createElement("h6");
                         const authorSubtitleNode = document.createTextNode(author);
                         authorSubtitle.className = "card-subtitle mb-2 text-muted";
-                        // authorSubtitle.appendChild(authorSubtitleNode);
+                        authorSubtitle.appendChild(authorSubtitleNode);
 
-                        // // add an owner tag for myself
-                        // if (author.includes("Randy Daal")) {
-                        //     const ownerEmoji = document.createElement("a");
-                        //     const ownerEmojiNode = document.createTextNode(" 👑️");
-                        //     ownerEmoji.href = "https://github.com/Metroxe";
-                        //     ownerEmoji.title = "Owner";
-                        //     ownerEmoji.appendChild(ownerEmojiNode);
-                        //     authorSubtitle.appendChild(ownerEmoji);
-                        // }
+                        // add an owner tag for myself
+                        if (author.includes("Christopher Powroznik")) {
+                            const ownerEmoji = document.createElement("a");
+                            const ownerEmojiNode = document.createTextNode(" 👑️");
+                            ownerEmoji.href = "https://github.com/Metroxe";
+                            ownerEmoji.title = "Owner";
+                            ownerEmoji.appendChild(ownerEmojiNode);
+                            authorSubtitle.appendChild(ownerEmoji);
+                        }
 
                         body.appendChild(authorSubtitle);
                     }
