dealine, judges and prizes

--- a/index.html
+++ b/index.html
@@ -123,7 +123,17 @@
                             <b>How creative can you be with such restrictions?</b>
                         </p>
                         <a class="btn btn-primary btn-lg" href="https://github.com/FrontMen/one-html-page-challenge/blob/master/README.md#how-to-submit" role="button">Submit an Entry</a>
-                        <a class="btn btn-primary btn-lg" href="https://github.com/FrontMen/one-html-page-challenge" role="button">Github</a>
+                        <h2>Prizes</h2>
+                        <p>Submit your contributions before December 31st to win prizes</p>
+                        <p>The jury will score all submitted projects and select a <b>winner</b>.</p>
+                        <h3>The Jury</h3>
+                        <uL>
+                            <li>Sylvia Blok</li>
+                            <li>Matthias de Boer</li>
+                            <li>Jeroen Groothoff</li>
+                        </uL>
+
+                            
                     </div>
                     <div class="input-group flex-nowrap">
                         <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="addon-wrapping" id="search" oninput="searchOnInput()" />
