added some text

--- a/index.html
+++ b/index.html
@@ -337,6 +337,12 @@
                             <hr class="my-4" />
                         </header>
                         <article>
+                            <h2>Intro</h2>
+                            <p>
+                                Hey FrontPeepz! While we are still in this long and gruesome Pandemic we thought it might be time to do something fun again.
+                                So we came up with an awesome challenge! And with an awesome challenge we should get an awesome prize as well.
+                                Therefore for the winner of this challenge will get a ...</p>
+
                             <p>
                                 The goal is to create anything you want within 1 single html file. Practice your skills with no assistance from libraries, no separation of files, and no assistance of a modern framework.
                                 <b>How creative can you be with such restrictions?</b>
