--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
               </article>
               <article>
               <h3>Prizes</h3>
-              <p>Be lucky and win one of carefully selected prizes!</p>
+              <p>Be lucky, and win one of the carefully selected prizes!</p>
               <div class="d-flex flex-md-row flex-column justify-content-around
               align-items-center">
                 <div class="card order-1 order-md-0" style="width: 16rem">
