--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
         </div>
       </section>
       <p class="text-right">
-        Project inspired on
+        Project inspired by
         <a href="https://onehtmlpagechallenge.com" rel="nofollow"
           >One HTML Page Challenge</a
         >
