--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
     <link rel="manifest" href="./meta/site.webmanifest" />
 
     <!-- Windows tile theme color -->
-    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-TileColor" content="#ff6600" />
     <meta name="msapplication-TileImage" content="./meta/ms-icon-144x144.png" />
     <meta name="msapplication-config" content="./meta/browserconfig.config" />
 
     <!-- Android theme color -->
     <meta name="theme-color" content="#ffffff" />
-    <link rel="mask-icon" href="./meta/safari-pinned-tab.svg" color="#ffa500" />
+    <link rel="mask-icon" href="./meta/safari-pinned-tab.svg" color="#ff6600" />
 
     <!-- END Icons -->
 
@@ -128,7 +128,7 @@
     />
     <meta
       property="og:image"
-      content="https://repository-images.githubusercontent.com/194445383/571a9000-9cd0-11e9-9a72-2faf76647a01"
+      content="https://onehtmlpagechallenge.frontmen.io/meta/promotion-image.png"
     />
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
