--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 Hey FrontPeepz! While we are still in this long and gruesome
                 Pandemic we thought it might be time to do something fun again.
                 So we came up with an awesome challenge! And with an awesome
-                challenge we should get an awesome prize as well. Therefore for
+                challenge we should get an awesome prize as well. Therefore
                 the winner of this challenge will get an <b class="watch">Apple Watch!</b>
               </p>
 
