Added extra line to the rules

--- a/index.html
+++ b/index.html
@@ -519,6 +519,9 @@
                 separation of files, and no assistance of a modern framework.
                 <b>How creative can you be with such restrictions?</b>
               </p>
+              <p>
+                More on the rules can be found <a href="https://github.com/FrontMen/one-html-page-challenge/blob/master/README.md#rules">here</a>!
+              </p>
             </article>
             <aside>
               <a
