added quasimono,html: a tool to create ascii & emoji art for social media

--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
         margin-right: 0.5em;
       }
 
+      .card-text {
+         white-space: pre-wrap;
+      }
+
       .input-group {
         height: 2em;
       }
